<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Bnei Baruch Lessons Downloader</string>
	<string name="NoFileFound">Files not found</string>
	<!-- string name="CannotPlayFile">The file couldn\'t be played</string -->
	<string name="DownloadingFile">Download started</string>
	<string name="local_service_started">Bnei Baruch Media Downloader Started</string>
	<!-- string name="local_service_stopped">Bnei Baruch Media Downloader Stopped</string -->
	<!-- string name="local_service_label">Bnei Baruch Media Downloading</string -->
	<!-- string name="local_service_connected">Bnei Baruch Media Downloader Connected</string -->
	<!-- string name="local_service_disconnected">Bnei Baruch Media Downloader Disconnected</string -->
	<string name="file_downloaded">Downloaded: </string>
	<string name="file_failed">Cannot download file:</string>
	<string name="language">Language</string>
	<string name="download_mp3">Download mp3</string>
	<!-- string name="high_quality">High Quality</string -->
	<string name="download_mp4">Download mp4</string>
	<string name="local_folder_name">Local Folder Name</string>
	<string name="show_yesterday">Show Yesterday</string>
	<string name="show_yesterday_condensed">Yesterday</string>
	<string name="settings_title">Settings</string>
	<string name="show_today">Show Today</string>
	<string name="show_today_condensed">Today</string>
	<!-- string name="don_t_download_high_quality_audio">"Don't download high quality audio"</string>
	<string name="download_high_quality_audio">Download high quality audio</string-->
	<string name="permission_storage_rationale">The downloader application need storage to download files !!!</string>
	<string name="don_t_download_low_quality_audio">"Don't download audio"</string>
	<string name="download_low_quality_audio">Download audio</string>
	<string name="morninglessons">MorningLessons</string>
	<string name="check_now">Check Now</string>
	<string name="check_yesterday">Check Yesterday</string>
	<string name="check">Check</string>
	<string name="input_local_folder_name">Input Local Folder Name</string>
	<string name="delete_old_files">Delete Old Files</string>
	<string name="don_t_download_video">"Don't download video"</string>
	<string name="download_video">Download video</string>
	<string name="files_will_be_downoaded_from_the_beginning">Files will be downoaded from the beginning</string>
	<string name="resume_failed_downloads">Resume Failed Downloads</string>
	<string name="files_will_be_resumed_from_the_point_of_failure">Files will be resumed from the point of failure</string>
	<string name="check_cellular">Check With Cellular Connection</string>
	<string name="check_both">Work with both types of connections</string>
	<string name="check_wifi_only">Work with WiFi only</string>
	<string name="proxy_host_name">Proxy Host</string>
	<string name="proxy_port_number">Proxy Port</string>
	<string name="proxy_enabled">Enabled</string>
	<string name="proxy_disabled">Disabled</string>
	<string name="use_http_proxy">Use Http Proxy</string>
	<string name="file_mp3">file mp3</string>
	<string name="bb_tree">BB Tree</string>
	<string name="donate">Donate</string>
	<string name="ok">OK</string>
	<string name="channel_name">BB Downloader</string>
	<string name="channel_description">Bnei-Baruch Lessons Downloader Notifications</string>
</resources>
