<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/MainView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

		<Button
		    android:id="@+id/Donate"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onDonateClick"
		    android:text="@string/donate" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btnCheckNow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:onClick="onCheckNowClick"
				android:text="@string/check_now" />
		<!-- Button android:layout_width="match_parent" android:layout_height="wrap_content" 
			android:text="@string/play_now" android:id="@+id/btnPlayNow" android:onClick="onPlayNowClick" 
			android:enabled="false" android:visible="false"/ -->
			<Button
				android:id="@+id/btnCheckYesterday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:onClick="onCheckYesterdayClick"
				android:text="@string/check_yesterday" />

	</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/fileListId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Preview: listitem=@layout/file_li -->
        </ListView>

        <WebView
            android:id="@+id/wvShowAds"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_alignParentBottom="true"></WebView>
    </RelativeLayout>
</LinearLayout>
